# bank-simulator

./: docker-compose.yml
.docker/mongodb-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-7140240190558217660.wt  collection-2-7140240190558217660.wt  index-1-7140240190558217660.wt  index-3-7140240190558217660.wt  sizeStorer.wt
.docker/mongodb-data/diagnostic.data/: metrics.2020-12-31T18-52-26Z-00000  metrics.2020-12-31T18-53-50Z-00000  metrics.2020-12-31T19-03-56Z-00000  metrics.2020-12-31T19-13-44Z-00000  metrics.2020-12-31T19-25-18Z-00000  metrics.2020-12-31T19-29-40Z-00000  metrics.2020-12-31T19-39-02Z-00000  (+1 more)
history/: pyproject.toml
history/app/: main.py
history/app/api/: main.py
history/app/api/controller/: history.py
history/app/application/models/: history.py
history/app/infraestructure/db/: database.py
history/app/setting/consumer/: consumer.py
history/tests/: test_history.py
transfer/: alembic.ini  pyproject.toml
transfer/app/: main.py
transfer/app/api/: main.py
transfer/app/api/controller/: transfer.py
transfer/app/api/dependencies/: get_uow.py  services.py
transfer/app/application/models/: base.py  transfer.py
transfer/app/application/services/: transfer.py
transfer/app/infraestructure/db/: database.py  uow.py
transfer/app/infraestructure/mappings/: base.py  transfer.py
transfer/app/infraestructure/repositories/: base.py  transfer.py
transfer/app/migrations/: env.py
transfer/app/migrations/versions/: 1c643bc5d6b8_table_transfer_users.py  382ea58de0a8_first_migration.py  6e5f73996493_remove_table_transfer.py
transfer/app/setting/producer/: producer.py
transfer/tests/: test_transfer.py
