[tool.poetry]
name = "transfer"
version = "0.1.0"
description = ""
authors = ["GuilhermeScherner <guibarasuol99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
taskipy = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
